# kmlGen

./: CMakeLists.txt  DataModels.h  GeoMath.h  Info.plist  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  cities.json  current_marker_logic.html  filter.py  fix_syntax.py  inject_logic.py  move_kml_name.py  restore_geojson.py  restore_handles.py  temp_logic.html  test.js  update_marker.py
.github/workflows/: windows-build.yml
build_clang/: moc_MainWindow.cpp  moc_MapWidget.cpp
build_clean/: CMakeCache.txt  Makefile  cmake_install.cmake
build_clean/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_clean/KmlArcGenerator.app/Contents/: Info.plist
build_clean/KmlArcGenerator.app/Contents/MacOS/: KmlArcGenerator
build_clean/KmlArcGenerator_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_clean/KmlArcGenerator_autogen/EWIEGA46WW/: moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_MapWidget.cpp  moc_MapWidget.cpp.d
build_manual/: Makefile  build_manual.pro
